--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,30 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm bg-light">
-            <div class="container">
-                <h1>FIAP Inc</h1>
-                <a href="">home</a>
-            </div>
+<header>
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container">
+            <span class="navbar-brand mb-0 h1">FIAP Inc</span>
+            <a class="navbar-brand" href="#"><i class="fas fa-home"></i></a>
+        </div>
+    </nav>
+</header>
+<div id="menu">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.uol.com.br/">UOL</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.globo.com/">Globo</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
-        </nav>
-    </header>
-    <div id="menu">
-        Menu
-    </div>
-    <div id="content">
-        Porque nós o usamos?
-        É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).
-    </div>
+<div id="content">
+    Porque nós o usamos?
+    É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).
+</div>
 
-    <footer id="footer" class="footer text-center">
-        &copy; 2024 Turma de Microservices
-    </footer>
+<footer id="footer" class="footer text-center">
+    &copy; 2024 Turma de Microservices
+</footer>
 </body>
 </html>
