--- a/src/main/resources/templates/funcionario/form.html
+++ b/src/main/resources/templates/funcionario/form.html
@@ -1,122 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Funcionarios</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-	<div th:replace="layout/header :: headerFragment"></div>
-	<div th:replace="layout/menu :: menuFragment"></div>
+<div th:replace="layout/header :: headerFragment"></div>
+<div th:replace="layout/menu :: menuFragment"></div>
 
-	<div id="content">
+<div id="content">
 
     <div class="container">
         <h3>Cadastro de Funcionarios</h3>
 
-        <form>
+        <form th:action="@{/funcionarios/save}" th:object="${funcionario}" method="post">
             <div class="input-group mb-3">
 
                 <div class="input-group-prepend">
                     <div class="input-group-text">Id</div>
                 </div>
-                <input type="text" class="form-control" id="id">
+                <input class="form-control" id="id" th:field="*{id}" type="text" readonly>
             </div>
 
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <div class="input-group-text">Nome</div>
                 </div>
-                <input type="text" class="form-control" id="nome">
+                <input class="form-control" id="nome" th:field="*{nome}" type="text">
             </div>
 
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Data de Entrada</div>
-                </div>
-                <input type="date" class="form-control" id="dataEntrada">
-            </div>
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">Data de Entrada</div>-->
+            <!--                </div>-->
+            <!--                <input type="date" class="form-control" id="dataEntrada">-->
+            <!--            </div>-->
 
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Data de Saída</div>
-                </div>
-                <input type="date" class="form-control" id="dataSaida">
-            </div>
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">Data de Saída</div>-->
+            <!--                </div>-->
+            <!--                <input type="date" class="form-control" id="dataSaida">-->
+            <!--            </div>-->
 
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Salário</div>
-                </div>
-                <input type="text" class="form-control" id="salario">
-            </div>
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">Salário</div>-->
+            <!--                </div>-->
+            <!--                <input type="text" class="form-control" id="salario">-->
+            <!--            </div>-->
 
-            <label for="id_cargo">Cargo</label>
-            <select class="form-control" id="id_cargo">
-                <option value="1">Devenvolvedor</option>
-                <option value="2">Scrum Master</option>
-                <option value="3">Gerente</option>
-            </select>
-                
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">CEP</div>
-                </div>
-                <input type="text" class="form-control" id="cep">
-            </div>
+            <!--            <label for="id_cargo">Cargo</label>-->
+            <!--            <select class="form-control" id="id_cargo">-->
+            <!--                <option value="1">Devenvolvedor</option>-->
+            <!--                <option value="2">Scrum Master</option>-->
+            <!--                <option value="3">Gerente</option>-->
+            <!--            </select>-->
 
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Logradouro</div>
-                </div>
-                <input type="text" class="form-control" id="logradouro">
-            </div>
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">CEP</div>-->
+            <!--                </div>-->
+            <!--                <input type="text" class="form-control" id="cep">-->
+            <!--            </div>-->
 
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Número</div>
-                </div>
-                <input type="text" class="form-control" id="numero">
-            </div>  
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">Logradouro</div>-->
+            <!--                </div>-->
+            <!--                <input type="text" class="form-control" id="logradouro">-->
+            <!--            </div>-->
 
-			<div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Complemento</div>
-                </div>
-                <input type="text" class="form-control" id="complemento">
-            </div>              
-            
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Bairro</div>
-                </div>
-                <input type="text" class="form-control" id="bairro">
-            </div>
-            
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Cidade</div>
-                </div>
-                <input type="text" class="form-control" id="cidade">
-            </div>
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">Número</div>-->
+            <!--                </div>-->
+            <!--                <input type="text" class="form-control" id="numero">-->
+            <!--            </div>-->
 
-            <label for="uf">UF</label>
-            <select class="form-control" id="uf">
-                <option value="SP">São Paulo</option>
-                <option value="RJ">Rio de Janeiro</option>                
-            </select>            
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">Complemento</div>-->
+            <!--                </div>-->
+            <!--                <input type="text" class="form-control" id="complemento">-->
+            <!--            </div>-->
+
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">Bairro</div>-->
+            <!--                </div>-->
+            <!--                <input type="text" class="form-control" id="bairro">-->
+            <!--            </div>-->
+
+            <!--            <div class="input-group mb-3">-->
+            <!--                <div class="input-group-prepend">-->
+            <!--                    <div class="input-group-text">Cidade</div>-->
+            <!--                </div>-->
+            <!--                <input type="text" class="form-control" id="cidade">-->
+            <!--            </div>-->
+
+            <!--            <label for="uf">UF</label>-->
+            <!--            <select class="form-control" id="uf">-->
+            <!--                <option value="SP">São Paulo</option>-->
+            <!--                <option value="RJ">Rio de Janeiro</option>-->
+            <!--            </select>-->
 
 
-            <button class="btn btn-primary btn-sm">Confirmar</button>
-            <button class="btn btn-sm">Cancelar</button>
+                        <button type="submit" class="btn btn-primary btn-sm">Confirmar</button>
+                        <button class="btn btn-sm">Cancelar</button>
         </form>
-        
+
     </div>
-	</div>
-    
-    <div th:replace="layout/footer :: footerFragment"></div>
+</div>
+
+<div th:replace="layout/footer :: footerFragment"></div>
 </body>
 </html>
