--- a/src/main/resources/templates/funcionario/list.html
+++ b/src/main/resources/templates/funcionario/list.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Funcionarios</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-	<div th:replace="layout/header :: headerFragment"></div>
-	<div th:replace="layout/menu :: menuFragment"></div>
+<div th:replace="layout/header :: headerFragment"></div>
+<div th:replace="layout/menu :: menuFragment"></div>
 
-	<div id="content">
-	
+<div id="content">
+
     <div class="container">
         <h3>Listagem de Funcionarios</h3>
-        
-        <a href="funcionarios/form" class="btn-sm btn-primary"><i class="fas fa-plus"></i></a>
+
+        <a class="btn-sm btn-primary" href="funcionarios/add"><i class="fas fa-plus"></i></a>
 
         <table class="table table-hover table-sm">
             <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Nome</th>                
-                    <th>Salário</th> 
-					<th>Cidade/UF</th>                                                       
-                </tr>
+            <tr>
+                <th>Id</th>
+                <th>Nome</th>
+                <th>Salário</th>
+                <th>Cidade/UF</th>
+            </tr>
             </thead>
             <tbody>
-               <tr>
-                   <td>1</td>
-                   <td>Pelé</td>
-                   <td>R$ 50.000,00</td>                    
-                   <td>São Paulo/SP</td>                    
-               </tr>
-               <tr>
-                    <td>2</td>
-                    <td>Messi</td>
-                    <td>R$ 50000</td>                    
-                    <td>Fortaleza/CE</td>                    
-                </tr>
+            <tr>
+                <td>0</td>
+                <td>Pelé</td>
+                <td>R$ 50.000,00</td>
+                <td>São Paulo/SP</td>
+                <td>
+                    <a class="btn-sm btn-primary" href="/funcionarios/update">Editar</a>
+                    <a class="btn-sm btn-primary" href="/funcionarios/delete">Excluir</a>
+                </td>
+            </tr>
+            <tr th:each="funcionario: ${funcionarios}">
+                <td th:text="${funcionario.id}"></td>
+                <td th:text="${funcionario.nome}"></td>
+                <td></td>
+                <td></td>
+                <td>
+                    <a class="btn-sm btn-primary" th:href="@{/funcionarios/update/{id}(id=${funcionario.id})}">Editar</a>
+                    <a class="btn-sm btn-danger " th:href="@{/funcionarios/delete/{id}(id=${funcionario.id})}">Excluir</a>
+                </td>
+            </tr>
+
             </tbody>
-        </table>        
+        </table>
     </div>
-    </div>
-    
-    <div th:replace="layout/footer :: footerFragment"></div>
+</div>
+
+<div th:replace="layout/footer :: footerFragment"></div>
 </body>
 </html>
