--- a/src/main/resources/templates/funcionario/list.html
+++ b/src/main/resources/templates/funcionario/list.html
@@ -29,16 +29,16 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>0</td>
-                <td>Pelé</td>
-                <td>R$ 50.000,00</td>
-                <td>São Paulo/SP</td>
-                <td>
-                    <a class="btn-sm btn-primary" href="/funcionarios/update">Editar</a>
-                    <a class="btn-sm btn-primary" href="/funcionarios/delete">Excluir</a>
-                </td>
-            </tr>
+<!--            <tr>-->
+<!--                <td>0</td>-->
+<!--                <td>Pelé</td>-->
+<!--                <td>R$ 50.000,00</td>-->
+<!--                <td>São Paulo/SP</td>-->
+<!--                <td>-->
+<!--                    <a class="btn-sm btn-primary" href="/funcionarios/update">Editar</a>-->
+<!--                    <a class="btn-sm btn-primary" href="/funcionarios/delete">Excluir</a>-->
+<!--                </td>-->
+<!--            </tr>-->
             <tr th:each="funcionario: ${funcionarios}">
                 <td th:text="${funcionario.id}"></td>
                 <td th:text="${funcionario.nome}"></td>
