--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -1,4 +1,4 @@
-<div th:fragment="footerFragment">
+<div th:fragment="footerFragment" xmlns:th="http://www.w3.org/1999/xhtml">
 	<footer id="footer" class="footer text-center">
 		&copy; 2024 Turma de Microservices
 	</footer>
