--- a/src/main/resources/templates/funcionario/form.html
+++ b/src/main/resources/templates/funcionario/form.html
@@ -111,7 +111,7 @@
 
 
                         <button type="submit" class="btn btn-primary btn-sm">Confirmar</button>
-                        <button class="btn btn-sm">Cancelar</button>
+                        <a th:href="@{/funcionarios}" class="btn btn-sm">Cancelar</a>
         </form>
 
     </div>
