--- a/src/main/resources/templates/cargo/list.html
+++ b/src/main/resources/templates/cargo/list.html
@@ -16,7 +16,7 @@
     <div class="container">
         <h1>Listagem de Cargos</h1>
 
-        <button class="btn btn-primary btn-sm">Novo</button>
+        <a class="btn-sm btn-primary" href="cargos/add"><i class="fas fa-plus"></i></a>
 
         <table class="table table-hover table-sm">
             <thead>
