--- a/src/main/resources/templates/departamento/list.html
+++ b/src/main/resources/templates/departamento/list.html
@@ -14,9 +14,9 @@
 
 <div id="content">
     <div class="container">
-        <h1>Listagem de Departamentos</h1>
+        <h3>Listagem de Departamentos</h3>
 
-        <button class="btn btn-primary btn-sm">Novo</button>
+        <a class="btn-sm btn-primary" href="departamentos/add"><i class="fas fa-plus"></i></a>
 
         <table class="table table-hover table-sm">
             <thead>
