--- a/src/main/resources/templates/departamento/form.html
+++ b/src/main/resources/templates/departamento/form.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Departamentos</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-    <h1>Cadastro de Departamentos</h1>
+<div th:replace="layout/header :: headerFragment"></div>
+<div th:replace="layout/menu :: menuFragment"></div>
 
-    <form>
+<div class="container">
+    <h3>Cadastro de Departamentos</h3>
+
+    <form th:action="@{/departamentos/save}" th:object="${departamento}" method="post">
         <div class="input-group mb-3">
 
             <div class="input-group-prepend">
                 <div class="input-group-text">Id</div>
             </div>
-            <input type="text" class="form-control" id="id">
+            <input class="form-control" id="id" th:field="*{id}" type="text" readonly>
         </div>
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <div class="input-group-text">Nome</div>
             </div>
-            <input type="text" class="form-control" id="nome">
+            <input class="form-control" id="nome" th:field="*{nome}" type="text">
         </div>
-        <button class="btn btn-primary btn-sm">Confirmar</button>
-        <button class="btn btn-sm">Cancelar</button>
+        <button type="submit" class="btn btn-primary btn-sm">Confirmar</button>
+        <a th:href="@{/departamentos}" class="btn btn-sm">Cancelar</a>
     </form>
+<!--    <form>-->
+<!--        <div class="input-group mb-3">-->
+
+<!--            <div class="input-group-prepend">-->
+<!--                <div class="input-group-text">Id</div>-->
+<!--            </div>-->
+<!--            <input type="text" class="form-control" id="id">-->
+<!--        </div>-->
+
+<!--        <div class="input-group mb-3">-->
+<!--            <div class="input-group-prepend">-->
+<!--                <div class="input-group-text">Nome</div>-->
+<!--            </div>-->
+<!--            <input type="text" class="form-control" id="nome">-->
+<!--        </div>-->
+<!--        <button class="btn btn-primary btn-sm">Confirmar</button>-->
+<!--        <button class="btn btn-sm">Cancelar</button>-->
+<!--    </form>-->
+    <div th:replace="layout/footer :: footerFragment"></div>
 
 </div>
 </body>
