--- a/src/main/resources/templates/cargo/form.html
+++ b/src/main/resources/templates/cargo/form.html
@@ -29,6 +29,13 @@
             </div>
             <input class="form-control" id="nome" th:field="*{nome}" type="text">
         </div>
+
+        <label for="id_departamento">Departamentos</label>
+        <select class="form-control" id="id_departamento">
+            <option value="10">RH</option>
+            <option value="11">Financeiro</option>
+            <option value="12">Vendas</option>
+        </select>
         <button type="submit" class="btn btn-primary btn-sm">Confirmar</button>
         <a th:href="@{/departamentos}" class="btn btn-sm">Cancelar</a>
     </form>
