--- a/src/main/resources/templates/departamento/list.html
+++ b/src/main/resources/templates/departamento/list.html
@@ -23,6 +23,7 @@
                 <tr>
                     <th>Id</th>
                     <th>Departamento</th>
+                    <th>Ação</th>
                 </tr>
             </thead>
             <tbody>
