--- a/src/main/resources/templates/funcionario/list.html
+++ b/src/main/resources/templates/funcionario/list.html
@@ -26,6 +26,7 @@
                 <th>Nome</th>
                 <th>Salário</th>
                 <th>Cidade/UF</th>
+                <th>Ação</th>
             </tr>
             </thead>
             <tbody>
