--- a/src/main/resources/templates/cargo/form.html
+++ b/src/main/resources/templates/cargo/form.html
@@ -32,7 +32,7 @@
 
         <label for="id_departamento">Departamentos</label>
         <select class="form-control" id="id_departamento">
-            <option value="10">RH</option>
+<!--            <option th:value="${cargo.departamento.id}" th:text="${cargo.departamento.nome}">RH</option>-->
             <option value="11">Financeiro</option>
             <option value="12">Vendas</option>
         </select>
